fix spacing, add react icon to header, update package json with fort awesome icons, update readme, and add react redirect link

--- a/jmamed/src/app/header/header.component.scss
+++ b/jmamed/src/app/header/header.component.scss
@@ -15,6 +15,7 @@ div.header{
       font-size: 18px;
       color: #ffffff;
       padding: 8px 16px;
+      text-decoration: none;
 
     }
   }
